--- a/public/css/style.css
+++ b/public/css/style.css
@@ -289,3 +289,15 @@ footer {
   color: var(--primary-color);
   text-decoration: underline;
 }
+
+.cart-card__quantity {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.qty-btn {
+  padding: 4px 10px;
+  font-size: 16px;
+  cursor: pointer;
+}
